[ADD] purchase_indonesia : add description in purchase_request report

--- a/purchase_indonesia/reports/report_goods_receipt_notes.xml
+++ b/purchase_indonesia/reports/report_goods_receipt_notes.xml
@@ -31,7 +31,7 @@
 		                       		            <b>Lokasi</b>
 		                       		        </td>
 		                       		        <td class="noborder">
-		                       		            <b>: <span t-field="o.type_location"/></b>
+		                       		            <b>: <span t-field="o.location"/></b>
 		                       		        </td>
 		                       		    </tr>
 		                       		</table>
