[ADD] purchase_indonesia : status GRN/SRN closed if qty in picking , purchase , invoice , tender is received

--- a/purchase_indonesia_account/views/inherit_stock_picking.xml
+++ b/purchase_indonesia_account/views/inherit_stock_picking.xml
@@ -12,7 +12,7 @@
                                 icon="fa-pencil-square-o"
                                 context="{'xml_id':'action_invoice_tree2'}"
                                 attrs="{'invisible': ['|',('state','!=','done')]}"
-                                groups="purchase_request.group_purchase_request_procstaff,purchase_indonesia.group_purchase_request_finance_procurement"
+                                groups="purchase_request.group_purchase_request_procstaff"
                                 >
                           <field name="invoice_count" widget="statinfo" string="Invoices"/>
                      </button>
