--- a/purchase_indonesia/views/inherit_purchase_tender.xml
+++ b/purchase_indonesia/views/inherit_purchase_tender.xml
@@ -45,9 +45,13 @@
              <field name="inherit_id" ref="purchase_requisition.view_purchase_requisition_form"/>
              <field name="arch" type="xml">
 
-                 <!--<xpath expr="//header/button[@name='sent_suppliers']" position="before">-->
-                     <!--<button name="print_purchase_request_tender" string="Print PR/PP" type="object"  groups="purchase_request.group_purchase_request_procstaff"/>-->
-                 <!--</xpath>-->
+                 <xpath expr="//header/button[@name='generate_po']" position="after">
+                     <button name="tender_state_closed" states="done" string="PP Close" type="object" class="oe_highlight"/>
+                 </xpath>
+
+                 <xpath expr="//field[@name='state']" position="replace">
+                     <field name="state" widget="statusbar" statusbar_visible="draft,in_progress" statusbar_colors='{"in_progress":"blue"}'/>
+                 </xpath>
 
                  <xpath expr="//h1/field[@name='name']" position="replace">
                            <field name="complete_name" class="oe_inline" invisible="0"
@@ -95,6 +99,7 @@
                      <field name="companys_id" string="Company" attrs="{'readonly': [('state','not in',('draft'))]}"/>
                      <field name="type_location" string="Location" invisible="1"/>
                      <field name="location" string="Location" attrs="{'readonly': [('state','not in',('draft'))]}"/>
+                     <field name="force_closing" string="Force Close Tender" attrs="{'readonly': [('state','not in',('done'))]}"/>
                  </xpath>
 
                  <xpath expr="//tree/field[@name='product_id']" position="after">
@@ -128,7 +133,7 @@
                  <xpath expr="//button[@name='%(purchase_requisition.action_purchase_requisition_partner)d']" position="replace">
                          <button name="%(purchase_requisition.action_purchase_requisition_partner)d" type="action"
                         string="Request a Quotation" icon="fa-cogs"
-                        attrs="{'invisible': [('validation_correction','=',False)]}"/>
+                        attrs="{'invisible': [('validation_correction','=',False),('state','in',['draft','done','closed'])]}"/>
                  </xpath>
 
                  <xpath expr="//field/tree[1]/field[@name='name']" position="before">
