--- a/purchase_indonesia/views/inherit_purchase_tender.xml
+++ b/purchase_indonesia/views/inherit_purchase_tender.xml
@@ -99,7 +99,8 @@
                      <field name="companys_id" string="Company" attrs="{'readonly': [('state','not in',('draft'))]}"/>
                      <field name="type_location" string="Location" invisible="1"/>
                      <field name="location" string="Location" attrs="{'readonly': [('state','not in',('draft'))]}"/>
-                     <field name="force_closing" string="Force Close Tender" attrs="{'readonly': [('state','not in',('done'))]}"/>
+                     <field name="force_closing" widget="radio" string="Force Close Tender" attrs="{'readonly': [('state','not in',('done'))]}"/>
+                     <field name="validation_check_backorder" string="Back Order" invisible="1"/>
                  </xpath>
 
                  <xpath expr="//tree/field[@name='product_id']" position="after">
@@ -134,6 +135,14 @@
                          <button name="%(purchase_requisition.action_purchase_requisition_partner)d" type="action"
                         string="Request a Quotation" icon="fa-cogs"
                         attrs="{'invisible': [('validation_correction','=',False),('state','in',['draft','done','closed'])]}"/>
+                 </xpath>
+
+                 <xpath expr="//button[@name='%(purchase_requisition.action_purchase_requisition_partner)d']" position="after">
+                        <button name="create_backorder_quotation_comparison_form" type="object"
+                                string="Back Order PO"
+                                icon ="fa-reply"
+                             attrs="{'invisible': ['|',('state','!=','open'),('validation_check_backorder','=',True)]}"
+                             />
                  </xpath>
 
                  <xpath expr="//field/tree[1]/field[@name='name']" position="before">
