--- a/purchase_indonesia/views/quotation_comparison.xml
+++ b/purchase_indonesia/views/quotation_comparison.xml
@@ -153,7 +153,7 @@
                                     <field name="type_location" string="Location" invisible="1"/>
                                     <field name="location" string="Location"/>
                                     <field name="line_remarks" invisible="1"/>
-                                    <field name="line_remarks_backorder" invisible="1"/>
+                                    <!--<field name="line_remarks_backorder" invisible="1"/>-->
                                     <field name="validation_check_backorder" string='Backorder' attrs="{
                                                    'invisible':[('validation_check_backorder','=',False)]}"/>
                                 </group>
@@ -210,56 +210,56 @@
                                                     context="{'tree_view_ref' : 'purchase_indonesia.view_tree_quotation_comparison_line10',
                                                            }"/>
                             <!--Back Order -->
-                            <field name="v_backorder_quotation_comparison_line_ids" track_visibility="onchange"
-                                                   attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')],
-                                                   'invisible':['|',('line_remarks_backorder','!=',1),('validation_check_backorder','=',False)]}"
-                                                context="{'tree_view_ref' : 'purchase_indonesia.view_tree_quotation_comparison_line1',
-                                                       }"/>
-                            <field name="v_backorder_quotation_comparison_line_ids2" track_visibility="onchange"
-                                                   attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')],
-                                                   'invisible':['|',('line_remarks_backorder','!=',2),('validation_check_backorder','=',False)]}"
-                                                context="{'tree_view_ref' : 'purchase_indonesia.view_tree_quotation_comparison_line2',
-                                                       }"/>
-                            <field name="v_backorder_quotation_comparison_line_ids3" track_visibility="onchange"
-                                                   attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')],
-                                                   'invisible':['|',('line_remarks_backorder','!=',3),('validation_check_backorder','=',False)]}"
-                                                context="{'tree_view_ref' : 'purchase_indonesia.view_tree_quotation_comparison_line3',
-                                                       }"/>
-                            <field name="v_backorder_quotation_comparison_line_ids4" track_visibility="onchange"
-                                                       attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')],
-                                                       'invisible':['|',('line_remarks_backorder','!=',4),('validation_check_backorder','=',False)]}"
-                                                    context="{'tree_view_ref' : 'purchase_indonesia.view_tree_quotation_comparison_line4',
-                                                           }"/>
-                            <field name="v_backorder_quotation_comparison_line_ids5" track_visibility="onchange"
-                                                       attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')],
-                                                       'invisible':['|',('line_remarks_backorder','!=',5),('validation_check_backorder','=',False)]}"
-                                                    context="{'tree_view_ref' : 'purchase_indonesia.view_tree_quotation_comparison_line5',
-                                                           }"/>
-                            <field name="v_backorder_quotation_comparison_line_ids6" track_visibility="onchange"
-                                                       attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')],
-                                                       'invisible':['|',('line_remarks_backorder','!=',6),('validation_check_backorder','=',False)]}"
-                                                    context="{'tree_view_ref' : 'purchase_indonesia.view_tree_quotation_comparison_line6',
-                                                           }"/>
-                            <field name="v_backorder_quotation_comparison_line_ids7" track_visibility="onchange"
-                                                       attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')],
-                                                       'invisible':['|',('line_remarks_backorder','!=',7),('validation_check_backorder','=',False)]}"
-                                                    context="{'tree_view_ref' : 'purchase_indonesia.view_tree_quotation_comparison_line7',
-                                                           }"/>
-                            <field name="v_backorder_quotation_comparison_line_ids8" track_visibility="onchange"
-                                                       attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')],
-                                                       'invisible':['|',('line_remarks_backorder','!=',8),('validation_check_backorder','=',False)]}"
-                                                    context="{'tree_view_ref' : 'purchase_indonesia.view_tree_quotation_comparison_line8',
-                                                           }"/>
-                            <field name="v_backorder_quotation_comparison_line_ids9" track_visibility="onchange"
-                                                       attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')],
-                                                       'invisible':['|',('line_remarks_backorder','!=',9),('validation_check_backorder','=',False)]}"
-                                                    context="{'tree_view_ref' : 'purchase_indonesia.view_tree_quotation_comparison_line9',
-                                                           }"/>
-                            <field name="v_backorder_quotation_comparison_line_ids10" track_visibility="onchange"
-                                                       attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')],
-                                                       'invisible':['|',('line_remarks_backorder','!=',10),('validation_check_backorder','=',False)]}"
-                                                    context="{'tree_view_ref' : 'purchase_indonesia.view_tree_quotation_comparison_line10',
-                                                           }"/>
+                            <!--<field name="v_backorder_quotation_comparison_line_ids" track_visibility="onchange"-->
+                                                   <!--attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')],-->
+                                                   <!--'invisible':['|',('line_remarks_backorder','!=',1),('validation_check_backorder','=',False)]}"-->
+                                                <!--context="{'tree_view_ref' : 'purchase_indonesia.view_tree_quotation_comparison_line1',-->
+                                                       <!--}"/>-->
+                            <!--<field name="v_backorder_quotation_comparison_line_ids2" track_visibility="onchange"-->
+                                                   <!--attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')],-->
+                                                   <!--'invisible':['|',('line_remarks_backorder','!=',2),('validation_check_backorder','=',False)]}"-->
+                                                <!--context="{'tree_view_ref' : 'purchase_indonesia.view_tree_quotation_comparison_line2',-->
+                                                       <!--}"/>-->
+                            <!--<field name="v_backorder_quotation_comparison_line_ids3" track_visibility="onchange"-->
+                                                   <!--attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')],-->
+                                                   <!--'invisible':['|',('line_remarks_backorder','!=',3),('validation_check_backorder','=',False)]}"-->
+                                                <!--context="{'tree_view_ref' : 'purchase_indonesia.view_tree_quotation_comparison_line3',-->
+                                                       <!--}"/>-->
+                            <!--<field name="v_backorder_quotation_comparison_line_ids4" track_visibility="onchange"-->
+                                                       <!--attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')],-->
+                                                       <!--'invisible':['|',('line_remarks_backorder','!=',4),('validation_check_backorder','=',False)]}"-->
+                                                    <!--context="{'tree_view_ref' : 'purchase_indonesia.view_tree_quotation_comparison_line4',-->
+                                                           <!--}"/>-->
+                            <!--<field name="v_backorder_quotation_comparison_line_ids5" track_visibility="onchange"-->
+                                                       <!--attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')],-->
+                                                       <!--'invisible':['|',('line_remarks_backorder','!=',5),('validation_check_backorder','=',False)]}"-->
+                                                    <!--context="{'tree_view_ref' : 'purchase_indonesia.view_tree_quotation_comparison_line5',-->
+                                                           <!--}"/>-->
+                            <!--<field name="v_backorder_quotation_comparison_line_ids6" track_visibility="onchange"-->
+                                                       <!--attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')],-->
+                                                       <!--'invisible':['|',('line_remarks_backorder','!=',6),('validation_check_backorder','=',False)]}"-->
+                                                    <!--context="{'tree_view_ref' : 'purchase_indonesia.view_tree_quotation_comparison_line6',-->
+                                                           <!--}"/>-->
+                            <!--<field name="v_backorder_quotation_comparison_line_ids7" track_visibility="onchange"-->
+                                                       <!--attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')],-->
+                                                       <!--'invisible':['|',('line_remarks_backorder','!=',7),('validation_check_backorder','=',False)]}"-->
+                                                    <!--context="{'tree_view_ref' : 'purchase_indonesia.view_tree_quotation_comparison_line7',-->
+                                                           <!--}"/>-->
+                            <!--<field name="v_backorder_quotation_comparison_line_ids8" track_visibility="onchange"-->
+                                                       <!--attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')],-->
+                                                       <!--'invisible':['|',('line_remarks_backorder','!=',8),('validation_check_backorder','=',False)]}"-->
+                                                    <!--context="{'tree_view_ref' : 'purchase_indonesia.view_tree_quotation_comparison_line8',-->
+                                                           <!--}"/>-->
+                            <!--<field name="v_backorder_quotation_comparison_line_ids9" track_visibility="onchange"-->
+                                                       <!--attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')],-->
+                                                       <!--'invisible':['|',('line_remarks_backorder','!=',9),('validation_check_backorder','=',False)]}"-->
+                                                    <!--context="{'tree_view_ref' : 'purchase_indonesia.view_tree_quotation_comparison_line9',-->
+                                                           <!--}"/>-->
+                            <!--<field name="v_backorder_quotation_comparison_line_ids10" track_visibility="onchange"-->
+                                                       <!--attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')],-->
+                                                       <!--'invisible':['|',('line_remarks_backorder','!=',10),('validation_check_backorder','=',False)]}"-->
+                                                    <!--context="{'tree_view_ref' : 'purchase_indonesia.view_tree_quotation_comparison_line10',-->
+                                                           <!--}"/>-->
                             <separator string="Recomendation/Remarks"/>
 
                             <field name="remarks"/>
